Aggiornamento funzionalità genitori - insegnanti aggiornamenti

--- a/index.html
+++ b/index.html
@@ -298,14 +298,9 @@
           </tr>
           <tr>
             <td> <b>Comunicazione</b> </td>
-            <td> Contatta il genitore </td>
-            <td> Il genitore può contattare privatamente un altro genitore, in maniera "asincrona", per chiedere aiuto (consigli, informazioni, passaggi a scuola) </td>
-            <td> .... </td>
-          </tr>
-          <tr>
-            <td> </td>
-            <td> Contatta l'insegnante</td>
-            <td> Il genitore può contattare privatamente, in maniera "asincrona", l'insegnante per richiedere informazioni, appuntamenti ecc ecc... </td>
+            <td> "Chat asincrona" </td>
+            <td> Il genitore può contattare privatamente, in maniera "asincrona",un altro genitore per chiedere aiuto (consigli, informazioni, passaggi a scuola, ecc ecc...) e/o
+              l'insegnante per richiedere informazioni, appuntamenti ecc ecc... </td>
             <td> .... </td>
           </tr>
           <tr>
@@ -362,21 +357,15 @@
           </tr>
           <tr>
               <td> </td>
-            <td> Crea evento Scuola</td>
+            <td> Crea evento "Scuola" </td>
             <td> Il genitore può organizzare eventi relativi alla scuola (mercatini di Natale, gite scolastiche, recite ecc ecc... ), scegliendo di poterli
                  condividere con gli insegnanti o i genitori</td>
             <td> .... </td>
           </tr>
           <tr>
               <td> <b>Comunicazione</b> </td>
-            <td> Contatta il genitore </td>
-            <td> L'insegnante può contattare privatamente, in maniera "asincrona", il genitore per appuntamenti, fornire informazioni relative al proprio figlio ecc ecc... </td>
-            <td> .... </td>
-          </tr>
-          <tr>
-              <td> </td>
-            <td> Contatta l'insegnante </td>
-            <td> L'insegnante può contattare privatamente, in maniera "asincrona", un altro insegnante </td>
+            <td> "Chat asincrona" </td>
+            <td> L'insegnante può contattare privatamente, in maniera "asincrona", il genitore per appuntamenti, fornire informazioni relative al proprio figlio (ecc ecc..) e/o un altro insegnante </td>
             <td> .... </td>
           </tr>
           <td> </td>
