Aggiornamento funzionalità genitori - insegnanti

--- a/index.html
+++ b/index.html
@@ -298,9 +298,14 @@
           </tr>
           <tr>
             <td> <b>Comunicazione</b> </td>
-            <td> "Chat asincrona" </td>
-            <td> Il genitore può contattare privatamente, in maniera "asincrona",un altro genitore per chiedere aiuto (consigli, informazioni, passaggi a scuola, ecc ecc...) e/o
-              l'insegnante per richiedere informazioni, appuntamenti ecc ecc... </td>
+            <td> Contatta il genitore </td>
+            <td> Il genitore può contattare privatamente un altro genitore, in maniera "asincrona", per chiedere aiuto (consigli, informazioni, passaggi a scuola) </td>
+            <td> .... </td>
+          </tr>
+          <tr>
+            <td> </td>
+            <td> Contatta l'insegnante</td>
+            <td> Il genitore può contattare privatamente, in maniera "asincrona", l'insegnante per richiedere informazioni, appuntamenti ecc ecc... </td>
             <td> .... </td>
           </tr>
           <tr>
@@ -364,8 +369,14 @@
           </tr>
           <tr>
               <td> <b>Comunicazione</b> </td>
-            <td> "Chat asincrona" </td>
-            <td> L'insegnante può contattare privatamente, in maniera "asincrona", il genitore per appuntamenti, fornire informazioni relative al proprio figlio (ecc ecc..) e/o un altro insegnante </td>
+            <td> Contatta il genitore </td>
+            <td> L'insegnante può contattare privatamente, in maniera "asincrona", il genitore per appuntamenti, fornire informazioni relative al proprio figlio ecc ecc... </td>
+            <td> .... </td>
+          </tr>
+          <tr>
+              <td> </td>
+            <td> Contatta l'insegnante </td>
+            <td> L'insegnante può contattare privatamente, in maniera "asincrona", un altro insegnante </td>
             <td> .... </td>
           </tr>
           <td> </td>
