Ulteriori aggiornamenti funzionalità insegnanti/genitori + correzione errori

--- a/index.html
+++ b/index.html
@@ -272,8 +272,14 @@
           </tr>
           <tr>
             <td> <b>Eventi</b> </td>
-            <td> Partecipa all'evento </td>
-            <td> Dopo aver ricevuto l'invito, ciascun genitore può avere la possibilità di partecipare o meno all'evento organizzato </td>
+              <td> Notifica evento </td>
+              <td> Il genitore riceve notifiche in una sezione "news" nel proprio profilo personale di eventi a cui è stato invitato </td>
+              <td> .... </td>
+          </tr>
+          <tr>
+              <td> </td>
+            <td> Partecipa all'evento (o rifiuta) </td>
+            <td> Dopo aver ricevuto l'invito, ciascun genitore può avere la possibilità di partecipare (o rifiutare) all'evento organizzato </td>
             <td> ... </td>
           </tr>
           <tr>
@@ -298,15 +304,21 @@
           </tr>
           <tr>
             <td> <b>Comunicazione</b> </td>
-            <td> Contatta il genitore </td>
-            <td> Il genitore può contattare privatamente un altro genitore, in maniera "asincrona", per chiedere aiuto (consigli, informazioni, passaggi a scuola) </td>
-            <td> .... </td>
+              <td> Leggi Messaggi ricevuti (notifiche) </td>
+              <td> .... </td>
+              <td> .... </td>
           </tr>
           <tr>
             <td> </td>
             <td> Contatta l'insegnante</td>
             <td> Il genitore può contattare privatamente, in maniera "asincrona", l'insegnante per richiedere informazioni, appuntamenti ecc ecc... </td>
             <td> .... </td>
+          </tr>
+          <tr>
+              <td> </td>
+              <td> Contatta il genitore </td>
+              <td> Il genitore può contattare privatamente un altro genitore, in maniera "asincrona", per chiedere aiuto (consigli, informazioni, passaggi a scuola) </td>
+              <td> .... </td>
           </tr>
           <tr>
             <td>  </td>
@@ -325,6 +337,13 @@
             <td> Carica documento </td>
             <td> In una sorta di spazio condiviso "dropbox", il genitore può condividere con gli altri genitori file pdf, word relativi alla scuola </td>
             <td> .... </td>
+          </tr>
+          <tr>
+              <td> <b> Calendario </b> </td>
+              <td> Sfoglia il calendario </td>
+              <td> Selezionando una data, il genitore nella homepage "dario di classe" tramite il calendario può avere la possibilità
+                  di risalire anche a "pagine del diario" (post) datati e consultare gli eventi in programma </td>
+              <td> .... </td>
           </tr>
           </tbody>
         </table>
@@ -356,22 +375,33 @@
           </tr>
           <tr>
               <td> <b> Eventi </b> </td>
-            <td> Partecipa all'evento</td>
-            <td> Dopo aver ricevuto l'invito, ciascun insegnante può avere la possibilità di partecipare o meno all'evento organizzato </td>
+              <td> Notifica evento </td>
+              <td> L'insegnante riceve notifiche in una sezione "news" nel proprio profilo personale di eventi a cui è stato invitato </td>
+              <td> .... </td>
+          </tr>
+          <td> </td>
+            <td> Partecipa all'evento (o rifiuta) </td>
+            <td> Dopo aver ricevuto l'invito, ciascun insegnante può avere la possibilità di partecipare (o rifiutare) all'evento organizzato </td>
             <td> .... </td>
           </tr>
           <tr>
               <td> </td>
             <td> Crea evento "Scuola" </td>
-            <td> Il genitore può organizzare eventi relativi alla scuola (mercatini di Natale, gite scolastiche, recite ecc ecc... ), scegliendo di poterli
+            <td> L'insegnante può organizzare eventi relativi alla scuola (mercatini di Natale, gite scolastiche, recite ecc ecc... ), scegliendo di poterli
                  condividere con gli insegnanti o i genitori</td>
             <td> .... </td>
           </tr>
           <tr>
               <td> <b>Comunicazione</b> </td>
-            <td> Contatta il genitore </td>
-            <td> L'insegnante può contattare privatamente, in maniera "asincrona", il genitore per appuntamenti, fornire informazioni relative al proprio figlio ecc ecc... </td>
-            <td> .... </td>
+              <td> Leggi Messaggi ricevuti (notifiche) </td>
+              <td> .... </td>
+              <td> .... </td>
+          </tr>
+          <tr>
+              <td> </td>
+              <td> Contatta il genitore </td>
+              <td> L'insegnante può contattare privatamente, in maniera "asincrona", il genitore per appuntamenti, fornire informazioni relative al proprio figlio ecc ecc... </td>
+              <td> .... </td>
           </tr>
           <tr>
               <td> </td>
@@ -401,6 +431,14 @@
             <td>Carica video</td>
             <td> .... </td>
             <td> .... </td>
+          </tr>
+          <tr>
+              <td> <b> Calendario </b> </td>
+              <td> Sfoglia il calendario </td>
+              <td> Selezionando una data, l'insegnante nella homepage "dario di classe" tramite il calendario può avere la possibilità
+                  di risalire anche a "pagine del diario" (post) datati e consultare gli eventi presenti </td>
+              <td> .... </td>
+
           </tr>
           </tbody>
         </table>
