(da riguardare domani) Ulteriori aggiornamenti funzionalità insegnanti/genitori + correzione errori

--- a/index.html
+++ b/index.html
@@ -282,6 +282,11 @@
             <td> Dopo aver ricevuto l'invito, ciascun genitore può avere la possibilità di partecipare (o rifiutare) all'evento organizzato </td>
             <td> ... </td>
           </tr>
+          <td> </td>
+          <td> Eventi (di cui si è accettato l'invito) </td>
+          <td> Dopo aver accettato l'invito ad un evento, ciascun genitore possiede un promemoria di tutti gli eventi (non solo odierni) nel proprio profilo </td>
+          <td> ... </td>
+          </tr>
           <tr>
             <td> </td>
             <td> Crea evento "Scuola" </td>
@@ -376,7 +381,7 @@
           <tr>
               <td> <b> Eventi </b> </td>
               <td> Notifica evento </td>
-              <td> L'insegnante riceve notifiche in una sezione "news" nel proprio profilo personale di eventi a cui è stato invitato </td>
+              <td> L'insegnante riceve notifiche in una sezione di eventi a cui è stato invitato nel proprio profilo personale </td>
               <td> .... </td>
           </tr>
           <td> </td>
@@ -389,6 +394,12 @@
             <td> Crea evento "Scuola" </td>
             <td> L'insegnante può organizzare eventi relativi alla scuola (mercatini di Natale, gite scolastiche, recite ecc ecc... ), scegliendo di poterli
                  condividere con gli insegnanti o i genitori</td>
+            <td> .... </td>
+          </tr>
+          <tr>
+            <td> </td>
+            <td> Promemoria eventi </td>
+            <td> Nella homepage verrano visualizzati tutti gli eventi "della giornata" a cui si parteciperà </td>
             <td> .... </td>
           </tr>
           <tr>
