aggiornamento funzionalità I/G - registrazione

--- a/index.html
+++ b/index.html
@@ -266,11 +266,25 @@
           </tr>
           <tr>
             <td> <b>Registrazione</b> </td>
-            <td> Registrazione </td>
-            <td> Inserimento dei propri dati (social, anagrafici, scuola) </td>
+            <td> Registrazione - passo 1 (*) </td>
+            <td> Inserimento dei propri dati social: caricamento immagine personale, email, password </td>
             <td> .... </td>
           </tr>
           <tr>
+            <td> </td>
+            <td> Registrazione - passo 2 (*) </td>
+            <td> Inserimento dei propri dati anagrafici: nome, cognome, sesso, città </td>
+            <td> .... </td>
+          </tr>
+          <tr>
+          <tr>
+            <td>  </td>
+            <td> Registrazione - passo 3 </td>
+            <td> Inserimento dei propri dati scuola: nome figlio, cognome figlio, scuola, classe, con possibilità di aggiungere più figli </td>
+            <td> .... </td>
+          </tr>
+          <tr>
+
             <td> <b>Eventi</b> </td>
               <td> Notifica evento </td>
               <td> Il genitore riceve notifiche in una sezione "news" nel proprio profilo personale di eventi a cui è stato invitato </td>
@@ -373,10 +387,23 @@
             <td> .... </td>
           </tr>
           <tr>
-              <td> <b>Registrazione</b> </td>
-              <td> Registrazione </td>
-              <td> Inserimento dei propri dati (social, anagrafici, scuola) </td>
-              <td> .... </td>
+            <td> <b>Registrazione</b> </td>
+            <td> Registrazione - passo 1 (*) </td>
+            <td> Inserimento dei propri dati social: caricamento immagine personale, email, password </td>
+            <td> .... </td>
+          </tr>
+          <tr>
+            <td> </td>
+            <td> Registrazione - passo 2 (*) </td>
+            <td> Inserimento dei propri dati anagrafici: nome, cognome, sesso, città </td>
+            <td> .... </td>
+          </tr>
+          <tr>
+          <tr>
+            <td> </td>
+            <td> Registrazione - passo 3 </td>
+            <td> Inserimento dei propri dati scuola: scuola, classe, materie, con possibilità di aggiungere più classi/materie </td>
+            <td> .... </td>
           </tr>
           <tr>
               <td> <b> Eventi </b> </td>
