aggiornamento funzionalità I/G - Homepage

--- a/index.html
+++ b/index.html
@@ -276,14 +276,48 @@
             <td> Inserimento dei propri dati anagrafici: nome, cognome, sesso, città </td>
             <td> .... </td>
           </tr>
-          <tr>
-          <tr>
             <td>  </td>
             <td> Registrazione - passo 3 </td>
             <td> Inserimento dei propri dati scuola: nome figlio, cognome figlio, scuola, classe, con possibilità di aggiungere più figli </td>
             <td> .... </td>
           </tr>
           <tr>
+              <td> <b>Homepage</b> </td>
+              <td> Lista Insegnanti - Contatta (*) </td>
+              <td> Lista di insegnanti dalla quale sarà possibile accedere ai profili degli Insegnanti (con la possibilità dunque di contattarli tramite chat "asincrona") </td>
+              <td> .... </td>
+          </tr>
+          <tr>
+              <td> </td>
+              <td> Lista Genitori - Contatta (*) </td>
+              <td> Lista di genitori ai quali viene associato il nome del proprio figlio, con possibilità di contattarli tramite chat "asincrona"  </td>
+              <td> .... </td>
+          </tr>
+          <tr>
+              <td>  </td>
+              <td> Visualizzazione dei post pubblicati dagli insegnanti (*) </td>
+              <td> Il genitore potrà visualizzare giorno dopo giorno i post che verranno pubblicati dai vari insegnanti </td>
+              <td> .... </td>
+          </tr>
+          <tr>
+              <td>  </td>
+              <td> Calendario (*) </td>
+              <td> Visualizzazione data odierna con possibilità di aprire il calendario e selezionare una data diversa (per risalire a post datati) </td>
+              <td> .... </td>
+          </tr>
+          <tr>
+              <td>  </td>
+              <td> Eventi (*) </td>
+              <td> Tramite questo pulsante, l'utente ha accesso all'area dedicata agli eventi</td>
+              <td> .... </td>
+          </tr>
+          <tr>
+              <td>  </td>
+              <td> Promemoria - notifica eventi (*) </td>
+              <td> In questa sezione l'utente visualizza tutti gli eventi del giorno (sia quelli a cui partecipa, sia quelli a cui non partecipa)</td>
+              <td> .... </td>
+          </tr>
+
 
             <td> <b>Eventi</b> </td>
               <td> Notifica evento </td>
@@ -406,6 +440,48 @@
             <td> .... </td>
           </tr>
           <tr>
+          <tr>
+              <td> <b>Homepage</b> </td>
+              <td> Lista Insegnanti - Contatta (*) </td>
+              <td> Lista di insegnanti dalla quale sarà possibile accedere ai profili degli Insegnanti (con la possibilità dunque di contattarli tramite chat "asincrona") </td>
+              <td> .... </td>
+          </tr>
+          <tr>
+              <td> </td>
+              <td> Lista Genitori - Contatta (*) </td>
+              <td> Lista di genitori ai quali viene associato il nome del proprio figlio, con possibilità di contattarli tramite chat "asincrona"  </td>
+              <td> .... </td>
+          </tr>
+          <tr>
+              <td>  </td>
+              <td> Visualizzazione dei post pubblicati dagli insegnanti (*) </td>
+              <td> Il genitore potrà visualizzare giorno dopo giorno i post che verranno pubblicati dai vari insegnanti </td>
+              <td> .... </td>
+          </tr>
+          <tr>
+              <td>  </td>
+              <td> Scrittura dei post </td>
+              <td> L'insegnante aggiorna il diario giornalmente pubblicando dei post realitivi a ciò che è stato fatto in aula </td>
+              <td> .... </td>
+          </tr>
+          <tr>
+              <td>  </td>
+              <td> Calendario (*) </td>
+              <td> Visualizzazione data odierna con possibilità di aprire il calendario e selezionare una data diversa (per risalire a post datati) </td>
+              <td> .... </td>
+          </tr>
+          <tr>
+              <td>  </td>
+              <td> Eventi (*) </td>
+              <td> Tramite questo pulsante, l'utente ha accesso all'area dedicata agli eventi</td>
+              <td> .... </td>
+          </tr>
+          <tr>
+              <td>  </td>
+              <td> Promemoria - notifica eventi (*) </td>
+              <td> In questa sezione l'utente visualizza tutti gli eventi del giorno (sia quelli a cui partecipa, sia quelli a cui non partecipa)</td>
+              <td> .... </td>
+          </tr>
               <td> <b> Eventi </b> </td>
               <td> Notifica evento </td>
               <td> L'insegnante riceve notifiche in una sezione di eventi a cui è stato invitato nel proprio profilo personale </td>
