aggiornamento funzionalità I/G - Eventi

--- a/index.html
+++ b/index.html
@@ -318,26 +318,30 @@
               <td> .... </td>
           </tr>
 
-
-            <td> <b>Eventi</b> </td>
-              <td> Notifica evento </td>
-              <td> Il genitore riceve notifiche in una sezione "news" nel proprio profilo personale di eventi a cui è stato invitato </td>
-              <td> .... </td>
+          <tr>
+            <td> <b> Eventi</b> </td>
+              <td> Calendario (*) </td>
+              <td> Nel calendario saranno evidenziati con colori diversi i giorni nei quali è programmato un evento (3 colori diversi per 3 tipologie di eventi diversi)
+              Schiacciando su un determinato giorno, si visualizza l'evento relativo a tale giorno, con descrizione annessa. Di default, viene visualizzato l'evento relativo alla data odierna
+              </td>
+              <td> ... </td>
           </tr>
           <tr>
               <td> </td>
-            <td> Partecipa all'evento (o rifiuta) </td>
-            <td> Dopo aver ricevuto l'invito, ciascun genitore può avere la possibilità di partecipare (o rifiutare) all'evento organizzato </td>
+            <td> Partecipa all'evento (*) </td>
+            <td> Agli eventi ai quali si è stati invitati, sotto la descrizione dell'evento, è associato il tasto Partecipa (si aggiornerà in tal modo la sezione "eventi a cui si parteciperà" nella pagina personale dell'utente) </td>
             <td> ... </td>
           </tr>
-          <td> </td>
-          <td> Eventi (di cui si è accettato l'invito) </td>
-          <td> Dopo aver accettato l'invito ad un evento, ciascun genitore possiede un promemoria di tutti gli eventi (non solo odierni) nel proprio profilo </td>
-          <td> ... </td>
+
+          <tr>
+              <td> </td>
+              <td> Crea evento (*) </td>
+              <td> L'utente ha la possibilità di creare un evento, e di specificarlo al passo successivo </td>
+              <td> .... </td>
           </tr>
           <tr>
             <td> </td>
-            <td> Crea evento "Scuola" </td>
+            <td> Crea evento "Scuola" (*) </td>
             <td> Il genitore può organizzare eventi relativi alla scuola (mercatini di Natale, gite scolastiche, recite ecc ecc ), scegliendo di poterli
             condividere con gli insegnanti o i genitori</td>
             <td> .... </td>
@@ -354,6 +358,13 @@
             <td> Il genitore può organizzare eventi esterni alla scuola (partite a calcetto, incontri tra genitori/insegnanti, ecc ecc), scegliendo di poterli
                 condividere con gli insegnanti o i genitori  </td>
             <td> .... </td>
+          </tr>
+          <tr>
+              <td> </td>
+              <td> Condividi evento con  - notifica invito evento (*) </td>
+              <td> L'utente può, prima di finalizzare la creazione di un evento, scegliere di condividerlo con solo gli insegnanti, solo i genitori, o entrambi. In base a tale scelta,
+              verrà inviata la notifica al relativo tipo di utente (nella sezione news eventi della pagina personale) </td>
+              <td> .... </td>
           </tr>
           <tr>
             <td> <b>Comunicazione</b> </td>
@@ -482,29 +493,43 @@
               <td> In questa sezione l'utente visualizza tutti gli eventi del giorno (sia quelli a cui partecipa, sia quelli a cui non partecipa)</td>
               <td> .... </td>
           </tr>
-              <td> <b> Eventi </b> </td>
-              <td> Notifica evento </td>
-              <td> L'insegnante riceve notifiche in una sezione di eventi a cui è stato invitato nel proprio profilo personale </td>
-              <td> .... </td>
-          </tr>
-          <td> </td>
-            <td> Partecipa all'evento (o rifiuta) </td>
-            <td> Dopo aver ricevuto l'invito, ciascun insegnante può avere la possibilità di partecipare (o rifiutare) all'evento organizzato </td>
-            <td> .... </td>
+
+          <tr>
+              <td> <b> Eventi</b> </td>
+              <td> Calendario (*) </td>
+              <td> Nel calendario saranno evidenziati con colori diversi i giorni nei quali è programmato un evento (3 colori diversi per 3 tipologie di eventi diversi)
+                  Schiacciando su un determinato giorno, si visualizza l'evento relativo a tale giorno, con descrizione annessa. Di default, viene visualizzato l'evento relativo alla data odierna
+              </td>
+              <td> ... </td>
           </tr>
           <tr>
               <td> </td>
-            <td> Crea evento "Scuola" </td>
-            <td> L'insegnante può organizzare eventi relativi alla scuola (mercatini di Natale, gite scolastiche, recite ecc ecc... ), scegliendo di poterli
-                 condividere con gli insegnanti o i genitori</td>
-            <td> .... </td>
+              <td> Partecipa all'evento (*) </td>
+              <td> Agli eventi ai quali si è stati invitati, sotto la descrizione dell'evento, è associato il tasto Partecipa (si aggiornerà in tal modo la sezione "eventi a cui si parteciperà" nella pagina personale dell'utente) </td>
+              <td> ... </td>
+          </tr>
+
+          <tr>
+              <td> </td>
+              <td> Crea evento (*) </td>
+              <td> L'utente ha la possibilità di creare un evento, e di specificarlo al passo successivo </td>
+              <td> .... </td>
           </tr>
           <tr>
-            <td> </td>
-            <td> Promemoria eventi </td>
-            <td> Nella homepage verrano visualizzati tutti gli eventi "della giornata" a cui si parteciperà </td>
-            <td> .... </td>
+              <td> </td>
+              <td> Crea evento "Scuola" (*) </td>
+              <td> Il genitore può organizzare eventi relativi alla scuola (mercatini di Natale, gite scolastiche, recite ecc ecc ), scegliendo di poterli
+                  condividere con gli insegnanti o i genitori</td>
+              <td> .... </td>
           </tr>
+          <tr>
+              <td> </td>
+              <td> Condividi evento con  - notifica invito evento (*) </td>
+              <td> L'utente può, prima di finalizzare la creazione di un evento, scegliere di condividerlo con solo gli insegnanti, solo i genitori, o entrambi. In base a tale scelta,
+                  verrà inviata la notifica al relativo tipo di utente (nella sezione news eventi della pagina personale) </td>
+              <td> .... </td>
+          </tr>
+
           <tr>
               <td> <b>Comunicazione</b> </td>
               <td> Leggi Messaggi ricevuti (notifiche) </td>
