aggiornamento funzionalità I/G - profili personali

--- a/index.html
+++ b/index.html
@@ -367,48 +367,37 @@
               <td> .... </td>
           </tr>
           <tr>
-            <td> <b>Comunicazione</b> </td>
-              <td> Leggi Messaggi ricevuti (notifiche) </td>
+              <td> <b>Profilo Personale </b> </td>
+              <td> Visualizzazione informazioni personali (*) </td>
+              <td> Verranno visualizzate alcune delle informazioni che l'utente ha inserito nella fase di registrazione </td>
               <td> .... </td>
-              <td> .... </td>
-          </tr>
-          <tr>
-            <td> </td>
-            <td> Contatta l'insegnante</td>
-            <td> Il genitore può contattare privatamente, in maniera "asincrona", l'insegnante per richiedere informazioni, appuntamenti ecc ecc... </td>
-            <td> .... </td>
           </tr>
           <tr>
               <td> </td>
-              <td> Contatta il genitore </td>
-              <td> Il genitore può contattare privatamente un altro genitore, in maniera "asincrona", per chiedere aiuto (consigli, informazioni, passaggi a scuola) </td>
+              <td> Notifiche Eventi (*) </td>
+              <td> L'utente visualizza gli eventi sia a cui è stato invitato (sezione "eventi a cui sono stato invitato"), sia gli
+                  eventi a cui ha deciso di partecipare (sezione "eventi a cui parteciperò") </td>
               <td> .... </td>
           </tr>
           <tr>
-            <td>  </td>
-            <td> Contatta l'esperto</td>
-            <td> Il genitore può contattare un esperto (psicologo, sessuologo) nel caso in cui lo ritenga necessario per il proprio figlio   </td>
-            <td> .... </td>
-          </tr>
-          <tr>
-            <td> <b> Spazio genitori </b> </td>
-            <td> Carica immagine</td>
-            <td> In una sorta di spazio condiviso "dropbox", il genitore può condividere con gli altri genitori foto relative a particolari eventi ecc ecc </td>
-            <td> .... </td>
-          </tr>
-          <tr>
-            <td>  </td>
-            <td> Carica documento </td>
-            <td> In una sorta di spazio condiviso "dropbox", il genitore può condividere con gli altri genitori file pdf, word relativi alla scuola </td>
-            <td> .... </td>
-          </tr>
-          <tr>
-              <td> <b> Calendario </b> </td>
-              <td> Sfoglia il calendario </td>
-              <td> Selezionando una data, il genitore nella homepage "dario di classe" tramite il calendario può avere la possibilità
-                  di risalire anche a "pagine del diario" (post) datati e consultare gli eventi in programma </td>
+              <td> </td>
+              <td> Chiedi aiuto ad un esperto </td>
+              <td> Il genitore potrà chiedere l'aiuto di un esperto (psicologo, sessuologo...) qualora lo ritenesse necessario per il proprio figlio </td>
               <td> .... </td>
           </tr>
+          <tr>
+              <td> </td>
+              <td> Spazio genitori </td>
+              <td> Tramite il pulsante "spazio genitori", il genitore potrà accedere allo spazio di condivisione file a cui hanno accesso solo i genitori </td>
+              <td> .... </td>
+          </tr>
+          <tr>
+              <td> </td>
+              <td> Area spazio genitori </td>
+              <td> In questa area, i genitori potranno condividere tra loro documenti e immagini vari </td>
+              <td> .... </td>
+          </tr>
+
           </tbody>
         </table>
 
@@ -531,54 +520,48 @@
           </tr>
 
           <tr>
-              <td> <b>Comunicazione</b> </td>
-              <td> Leggi Messaggi ricevuti (notifiche) </td>
-              <td> .... </td>
-              <td> .... </td>
-          </tr>
-          <tr>
-              <td> </td>
-              <td> Contatta il genitore </td>
-              <td> L'insegnante può contattare privatamente, in maniera "asincrona", il genitore per appuntamenti, fornire informazioni relative al proprio figlio ecc ecc... </td>
+              <td> <b>Profilo Personale </b> </td>
+              <td> Visualizzazione informazioni personali (*) </td>
+              <td> Verranno visualizzate alcune delle informazioni che l'utente ha inserito nella fase di registrazione </td>
               <td> .... </td>
           </tr>
           <tr>
               <td> </td>
-            <td> Contatta l'insegnante </td>
-            <td> L'insegnante può contattare privatamente, in maniera "asincrona", un altro insegnante </td>
+              <td> Notifiche Eventi (*) </td>
+              <td> L'utente visualizza gli eventi sia a cui è stato invitato (sezione "eventi a cui sono stato invitato"), sia gli
+                  eventi a cui ha deciso di partecipare (sezione "eventi a cui parteciperò") </td>
+              <td> .... </td>
+          </tr>
+          <tr>
+              <td> </td>
+            <td> Materiale didattico - visualizza </td>
+            <td> Gli insegnanti e i genitori potranno visualizzare il materiale didattico caricato dal docente </td>
             <td> .... </td>
           </tr>
           <td> </td>
-          <td> Condividi la tua giornata in classe </td>
-          <td> L'insegnante avrà la possibilità di aggiornare l'homepage "diario di classe", a cui hanno accesso sia i genitori, sia gli insegnanti della classe dei propri alunni </td>
+          <td> Materiale didattico - carica materiale </td>
+          <td> L'insegnante avrà la possibilità di caricare del materiale didattico extra nella sezione "materiale didattico" </td>
           <td> .... </td>
           </tr>
           <tr>
-              <td> <b> Materiale didattico </b> </td>
-            <td> Carica immagine </td>
+              <td> </td>
+            <td> Materiale didattico - carica immagine </td>
             <td> ....  </td>
             <td> .... </td>
           </tr>
             <tr>
                 <td> </td>
-            <td>Carica documento</td>
+            <td> Materiale didattico - carica documento </td>
             <td> .... </td>
             <td> .... </td>
             </tr>
           <tr>
               <td>  </td>
-            <td>Carica video</td>
+            <td> Materiale didattico - carica video </td>
             <td> .... </td>
             <td> .... </td>
           </tr>
-          <tr>
-              <td> <b> Calendario </b> </td>
-              <td> Sfoglia il calendario </td>
-              <td> Selezionando una data, l'insegnante nella homepage "dario di classe" tramite il calendario può avere la possibilità
-                  di risalire anche a "pagine del diario" (post) datati e consultare gli eventi presenti </td>
-              <td> .... </td>
 
-          </tr>
           </tbody>
         </table>
       </div>
